--- a/event-list-mobile/list.html
+++ b/event-list-mobile/list.html
@@ -1,75 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="format-detection" content="telephone=no">
-        <link rel="stylesheet" type="text/css" href="list.css" charset="UTF-8">
-    </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" type="text/css" href="list.css" charset="UTF-8">
+</head>
 
-    <body>
-        <div>
-            <div class="rel-list">
-                <div class="rel-item">
-                    <div class="rel-item-cover">
-                        <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
+<body>
+<div>
+    <div class="rel-list">
+        <div class="rel-item">
+            <div class="rel-item-cover">
+                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
+            </div>
+            <div class="rel-item-content">
+                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                <p class="rel-item-organizer">主办方：杭马会</p>
+                <div class="rel-item-statistics">
+                    <div class="rel-item-statistics-left">
+                        <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
+                        <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
                     </div>
-                    <div class="rel-item-content">
-                        <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                        <p class="rel-item-subtitle">主办方：杭马会</p>
-                        <div class="rel-item-info">
-                            <div class="rel-item-info-left">
-                                <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
-                                <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
-                            </div>
-                            <div class="rel-item-info-right">
-                                <span class="rel-item-count">133</span><span>报名</span>
-                            </div>
-                        </div>
+                    <div class="rel-item-statistics-right">
+                        <span class="rel-item-signup-count">133</span><span>报名</span>
                     </div>
                 </div>
-
-                <div class="rel-item">
-                    <div class="rel-item-cover">
-                        <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
-                    </div>
-                    <div class="rel-item-content">
-                        <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                        <p class="rel-item-subtitle">主办方：杭马会</p>
-                        <div class="rel-item-info">
-                            <div class="rel-item-info-left">
-                                <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
-                                <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
-                            </div>
-                            <div class="rel-item-info-right">
-                                <span class="rel-item-count">133</span><span>报名</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="rel-item">
-                    <div class="rel-item-cover">
-                        <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
-                    </div>
-                    <div class="rel-item-content">
-                        <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                        <p class="rel-item-subtitle">主办方：杭马会</p>
-                        <div class="rel-item-info">
-                            <div class="rel-item-info-left">
-                                <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
-                                <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
-                            </div>
-                            <div class="rel-item-info-right">
-                                <span class="rel-item-count">133</span><span>报名</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-            <div>
+            </div>
         </div>
-    </body>    
+
+        <div class="rel-item" data-event-id="$!event.id">
+            <div class="rel-item-cover">
+                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
+            </div>
+            <div class="rel-item-content">
+                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                <div class="rel-item-org-info">
+                    <div class="rel-item-org-image">
+                        <div class="rel-item-org-avatar"
+                             style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
+                        <div class="rel-item-org-avatar-vip"></div>
+                    </div>
+                    <div class="rel-item-organizer">杭马会</div>
+                </div>
+                <div class="rel-item-statistics">
+                    <div class="rel-item-statistics-left">
+                        <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
+                        <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
+                    </div>
+                    <div class="rel-item-statistics-right">
+                        <span class="rel-item-signup-count">133</span><span>报名</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="rel-item" data-event-id="$!event.id">
+            <div class="rel-item-cover">
+                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
+            </div>
+            <div class="rel-item-content">
+                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                <div class="rel-item-org-info">
+                    <div class="rel-item-org-image">
+                        <div class="rel-item-org-avatar"
+                             style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
+                    </div>
+                    <div class="rel-item-organizer">杭马会</div>
+                </div>
+                <div class="rel-item-statistics">
+                    <div class="rel-item-statistics-left">
+                        <i class="rel-item-time-icon-no-margin"></i><span class="rel-item-time">07/27</span>
+                    </div>
+                    <div class="rel-item-statistics-right">
+                        <span class="rel-item-signup-count">133</span><span>报名</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
