--- a/event-list-mobile/list.html
+++ b/event-list-mobile/list.html
@@ -13,74 +13,80 @@
 <body>
 <div>
     <div class="rel-list">
-        <div class="rel-item">
-            <div class="rel-item-cover">
-                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
-            </div>
-            <div class="rel-item-content">
-                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                <p class="rel-item-organizer">主办方：杭马会</p>
-                <div class="rel-item-statistics">
-                    <div class="rel-item-statistics-left">
-                        <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
-                        <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
-                    </div>
-                    <div class="rel-item-statistics-right">
-                        <span class="rel-item-signup-count">133</span><span>报名</span>
+        <a href="http://www.51bmb.com" class="rel-item-link">
+            <div class="rel-item">
+                <div class="rel-item-cover">
+                    <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640">
+                </div>
+                <div class="rel-item-content">
+                    <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                    <p class="rel-item-organizer">主办方：杭马会</p>
+                    <div class="rel-item-statistics">
+                        <div class="rel-item-statistics-left">
+                            <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
+                            <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
+                        </div>
+                        <div class="rel-item-statistics-right">
+                            <span class="rel-item-signup-count">133</span><span>报名</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
 
-        <div class="rel-item" data-event-id="$!event.id">
-            <div class="rel-item-cover">
-                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
-            </div>
-            <div class="rel-item-content">
-                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                <div class="rel-item-org-info">
-                    <div class="rel-item-org-image">
-                        <div class="rel-item-org-avatar"
-                             style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
-                        <div class="rel-item-org-avatar-vip"></div>
-                    </div>
-                    <div class="rel-item-organizer">杭马会</div>
+        <a href="http://www.51bmb.com" class="rel-item-link">
+            <div class="rel-item" data-event-id="$!event.id">
+                <div class="rel-item-cover">
+                    <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
                 </div>
-                <div class="rel-item-statistics">
-                    <div class="rel-item-statistics-left">
-                        <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
-                        <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
+                <div class="rel-item-content">
+                    <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                    <div class="rel-item-org-info">
+                        <div class="rel-item-org-image">
+                            <div class="rel-item-org-avatar"
+                                 style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
+                            <div class="rel-item-org-avatar-vip"></div>
+                        </div>
+                        <div class="rel-item-organizer">杭马会</div>
                     </div>
-                    <div class="rel-item-statistics-right">
-                        <span class="rel-item-signup-count">133</span><span>报名</span>
+                    <div class="rel-item-statistics">
+                        <div class="rel-item-statistics-left">
+                            <i class="rel-item-city-icon"></i><span class="rel-item-city">杭州</span>
+                            <i class="rel-item-time-icon"></i><span class="rel-item-time">07/27</span>
+                        </div>
+                        <div class="rel-item-statistics-right">
+                            <span class="rel-item-signup-count">133</span><span>报名</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
 
-        <div class="rel-item" data-event-id="$!event.id">
-            <div class="rel-item-cover">
-                <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
-            </div>
-            <div class="rel-item-content">
-                <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
-                <div class="rel-item-org-info">
-                    <div class="rel-item-org-image">
-                        <div class="rel-item-org-avatar"
-                             style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
-                    </div>
-                    <div class="rel-item-organizer">杭马会</div>
+        <a href="http://www.51bmb.com" class="rel-item-link">
+            <div class="rel-item" data-event-id="$!event.id">
+                <div class="rel-item-cover">
+                    <img src="http://upload.51bmb.com/ios/2904fd14695318922614.jpg?imageView2/2/w/640"/>
                 </div>
-                <div class="rel-item-statistics">
-                    <div class="rel-item-statistics-left">
-                        <i class="rel-item-time-icon-no-margin"></i><span class="rel-item-time">07/27</span>
+                <div class="rel-item-content">
+                    <p class="rel-item-title">杭州马拉松百日庆典活动夜跑报名</p>
+                    <div class="rel-item-org-info">
+                        <div class="rel-item-org-image">
+                            <div class="rel-item-org-avatar"
+                                 style="background-image: url('http://orgupload.51bmb.com/web/1473594533916?imageView2/1/w/480/h/480')"></div>
+                        </div>
+                        <div class="rel-item-organizer">杭马会</div>
                     </div>
-                    <div class="rel-item-statistics-right">
-                        <span class="rel-item-signup-count">133</span><span>报名</span>
+                    <div class="rel-item-statistics">
+                        <div class="rel-item-statistics-left">
+                            <i class="rel-item-time-icon-no-margin"></i><span class="rel-item-time">07/27</span>
+                        </div>
+                        <div class="rel-item-statistics-right">
+                            <span class="rel-item-signup-count">133</span><span>报名</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
     </div>
 </div>
 </body>
