add icon tile snippets

--- a/event-list-mobile/list.html
+++ b/event-list-mobile/list.html
@@ -7,6 +7,7 @@
           content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
+    <title>Event List</title>
     <link rel="stylesheet" type="text/css" href="list.css" charset="UTF-8">
 </head>
 
